--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ h1 {
 	<body>
 	<div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="April4.html">APRIL 4th</a>
+  <a href="/Primaries/April4.html">APRIL 4th</a>
   <a href="#">SERVICES</a>
   <a href="#">CLIENTS</a>
   <a href="#">CONTACT</a>
