--- a/index.html
+++ b/index.html
@@ -116,16 +116,7 @@ h1 {
 	<body>
 	<div id="mySidebar" class="sidebar">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="Primaries/April4.html">APRIL 4th</a>
-  <a href="Primaries/April7.html">APRIL 7th</a>
-  <a href="Primaries/April28.html">APRIL 28th</a>
-  <a href="Primaries/May2.html">MAY 2nd</a>	
-  <a href="Primaries/May5.html">MAY 5th</a>
-  <a href="Primaries/May12.html">MAY 12th</a>
-  <a href="Primaries/May19.html">MAY 19th</a>
-  <a href="Primaries/June2.html">JUNE 2nd</a>
-  <a href="Primaries/June20.html">JUNE 20th</a>
-  <a href="Primaries/June23.html">JUNE 23rd</a>
+  <a href="Primaries/Primaries.html">Primaries</a>
 </div>
 
 <div id="main">
