--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -35,8 +35,10 @@ h1 {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
-		
-</div>
+
+    </style>	
+	</head>
+	<body>
 	  <div class="container">
 	  <h1>UNDER</h1>
 	  <h1>CONSTRUCTION</h1>
