--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -40,8 +40,7 @@ h1 {
 	</head>
 	<body>
 	  <div class="container">
-	  <h1>UNDER</h1>
-	  <h1>CONSTRUCTION</h1>
+	  <h1><a href="Primaries/Primaries/Dates/April4.html">APRIL 4th</a></h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
 	  </div>
 	</body>
