--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -17,6 +17,7 @@ body {
 h1 {
   font-family: 'Open Sans', serif;
   text-align: center;
+  text-color: #ffffff;
   margin-top: 0px;
   margin-bottom: 0px;
   color: #ffffff;
