--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ h1 {
   <button class="openbtn" onclick="openNav()">&#9776;</button>
 </div>
 	  <div class="container">
+	  <img src="Logo.png" alt="logo">
 	  <h1>UNDER</h1>
 	  <h1>CONSTRUCTION</h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
