--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
    <head>
@@ -10,8 +11,8 @@
 	  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
 	<script>
 function openNav() {
-  document.getElementById("mySidebar").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
+  document.getElementById("mySidebar").style.width = "130px";
+  document.getElementById("main").style.marginLeft = "120px";
 }
 
 function closeNav() {
@@ -39,7 +40,7 @@ h1 {
 }
 		
 .logo {
-  margin-bottom: 50px;
+  padding: 50px;
 }
 	  
 .container {
@@ -67,7 +68,7 @@ h1 {
 
 /* The sidebar links */
 .sidebar a {
-  padding: 2px 2px 2px 32px;
+  padding: 2px 2px 2px 10px;
   text-decoration: none;
   font-size: 15px;
   color: #818181;
@@ -85,7 +86,7 @@ h1 {
 .sidebar .closebtn {
   position: absolute;
   top: 0;
-  right: 25px;
+  right: 15px;
   font-size: 36px;
   margin-left: 50px;
 }
@@ -127,7 +128,7 @@ h1 {
   <button class="openbtn" onclick="openNav()">&#9776;</button>
 </div>
 	  <div class="container">
-	  <img class="logo" src="Logo.png" alt="logo">
+	  <img class="logo" src="Logo.png" alt="logo" height="10%" width="10%">
 	  <h1>UNDER</h1>
 	  <h1>CONSTRUCTION</h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
