--- a/index.html
+++ b/index.html
@@ -42,10 +42,19 @@ h1 {
 .logo {
   padding: 50px;
 }
+
+.container2 {
+  position: absolute;
+  top: -90%;
+  left: 51.5%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
 	  
 .container {
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
@@ -128,7 +137,7 @@ h1 {
   <button class="openbtn" onclick="openNav()">&#9776;</button>
 </div>
 	  <div class="container">
-	  <img class="logo" src="Logo.png" alt="logo" height="10%" width="10%">
+	  <img class="logo container2" src="Logo.png" alt="logo" height="90%" width="65%">
 	  <h1>UNDER</h1>
 	  <h1>CONSTRUCTION</h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
