--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@ h1 {
 	  <h1>UNDER</h1>
 	  <h1>CONSTRUCTION</h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
+	  <h6> an experiment in buffoonery</h6>
 	  </div>
 	</body>
 </html>
