--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@ h1 {
   color: #ffffff;
   text-shadow: 0 0 2px rgba(240, 240, 240, 1);
 }
+		
+h6 {
+  font-family: 'Open Sans', serif;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 0px;
+  color: #ffffff;
+  text-shadow: 0 0 2px rgba(240, 240, 240, 1);
+{
 	  
 .fa-reddit-square:hover {
   color: #9ab6e3 !important;
@@ -141,7 +150,7 @@ h1 {
 	  <h1>UNDER</h1>
 	  <h1>CONSTRUCTION</h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
-	  <h6> an experiment in buffoonery</h6>
+	  <h6>AN EXPERIMENT IN BUFFONERY</h6>
 	  </div>
 	</body>
 </html>
