--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
    <head>
@@ -34,15 +33,15 @@ h1 {
   color: #ffffff;
   text-shadow: 0 0 2px rgba(240, 240, 240, 1);
 }
-		
+
 h6 {
   font-family: 'Open Sans', serif;
   text-align: center;
-  margin-top: 100px;
+  font-size: 7px;
+  margin-top: 0px;
   margin-bottom: 0px;
-  color: #ffffff;
-  text-shadow: 0 0 2px rgba(240, 240, 240, 1);
-{
+  color: #333131;
+}
 	  
 .fa-reddit-square:hover {
   color: #9ab6e3 !important;
@@ -150,7 +149,7 @@ h6 {
 	  <h1>UNDER</h1>
 	  <h1>CONSTRUCTION</h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
-	  <h6>AN EXPERIMENT IN BUFFONERY</h6>
+	  <h6> AN EXPERIMENT IN BUFFOONERY</h6>
 	  </div>
 	</body>
 </html>
