--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -51,12 +51,28 @@ h1 {
   color: #808080;
 }
 
+.bottomright {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  font-size: 18px;
+
     </style>	
 	</head>
 	<body>
 	  <div class="container sidebar">
 	  <h1><a class="sidebar" href="Dates/April4.html">APRIL 4th</a></h1>
+	  <h1><a class="sidebar" href="Dates/April7.html">APRIL 7th</a></h1>
+	  <h1><a class="sidebar" href="Dates/April28.html">APRIL 28th</a></h1>
+	  <h1><a class="sidebar" href="Dates/May2.html">MAY 2nd</a></h1>
+	  <h1><a class="sidebar" href="Dates/May5.html">MAY 5th</a></h1>
+	  <h1><a class="sidebar" href="Dates/May12.html">MAY 12th</a></h1>
+	  <h1><a class="sidebar" href="Dates/May19.html">MAY 19th</a></h1>
+	  <h1><a class="sidebar" href="Dates/June2.html">JUNE 2nd</a></h1>
+	  <h1><a class="sidebar" href="Dates/June20.html">JUNE 20th</a></h1>
+	  <h1><a class="sidebar" href="Dates/June23.html">JUNE 23rd</a></h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
 	  </div>
+	  <a href="kevin-l-wright.com"><img class="bottomright" src="Logo.png" alt="logo" height="3%" width="2%">
 	</body>
 </html>
