--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -73,6 +73,6 @@ h1 {
 	  <h1><a class="sidebar" href="Dates/June23.html">JUNE 23rd</a></h1>
 	  <h1><a rel="stylesheet" href="https://www.reddit.com/r/Kevin_L_Wright/" target="_blank"><i class="fab fa-reddit-square" style="color:#ffffff"></i></a></h1>
 	  </div>
-	  <a href="kevin-l-wright.com"><img class="bottomright" src="Logo.png" alt="logo" height="3%" width="2%">
+	  <a href="index.html"><img class="bottomright" src="Logo.png" alt="logo" height="3%" width="2%">
 	</body>
 </html>
