--- a/Primaries/Dates/April4.html
+++ b/Primaries/Dates/April4.html
@@ -182,6 +182,12 @@ h5 {
   width:33.33333%;
   text-align:center;
 }
+	
+.bottomright {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  font-size: 18px;
 
 </style>
 </head>
@@ -245,4 +251,7 @@ h5 {
 
 <h2 align="center"> <a href='https://www.symptoma.com/en/info/covid-19'>Corona Virus Q&A</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1043193e6efe4d70755b1df8ebf171da9f63f859'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/650572/t/5"></script></h2>
+	
+<a href="/index.html"><img class="bottomright" src="Logo.png" alt="logo" height="3%" width="2%">
+
 </body>
