--- a/Primaries/Dates/April4.html
+++ b/Primaries/Dates/April4.html
@@ -247,7 +247,12 @@ h5 {
     <tr>
       <td align="center" width="50%"><iframe src="https://interactives.ap.org/primary-elections-2020-04-04/?site=thenewyorker&STATE=HI&OFFICE=P" style="width:100%;height:589.6px;"></iframe></td>
     </tr>
+    <tr>
+      <a href="/index.html"><img class="bottomright" src="Logo.png" alt="logo" height="100%" width="100%">
+    </tr>
 </table>
+	
+<a href="/index.html"><img class="bottomright" src="Logo.png" alt="logo" height="100%" width="100%">
 
 <h2 align="center"> <a href='https://www.symptoma.com/en/info/covid-19'>Corona Virus Q&A</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1043193e6efe4d70755b1df8ebf171da9f63f859'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/650572/t/5"></script></h2>
