--- a/Primaries/Dates/April4.html
+++ b/Primaries/Dates/April4.html
@@ -183,12 +183,11 @@ h5 {
   text-align:center;
 }
 	
-.bottomright {
-  position: absolute;
+.logo {
+  position: fixed		;
   bottom: 16px;
   right: 16px;
-  font-size: 18px;
-
+{
 </style>
 </head>
 <body style="margin: 60px; font-family: 'Spartan', sans-serif;">
@@ -248,15 +247,13 @@ h5 {
       <td align="center" width="50%"><iframe src="https://interactives.ap.org/primary-elections-2020-04-04/?site=thenewyorker&STATE=HI&OFFICE=P" style="width:100%;height:589.6px;"></iframe></td>
     </tr>
     <tr>
-      <a href="/index.html"><img class="bottomright" src="Logo.png" alt="logo" height="100%" width="100%">
+      
     </tr>
 </table>
 	
-<a href="/index.html"><img class="bottomright" src="Logo.png" alt="logo" height="100%" width="100%">
+<a href="/index.html"><img align="right" class="logo" src="Logo_Bg_Rnd.png" alt="logo" height="40px" width="40px">
 
 <h2 align="center"> <a href='https://www.symptoma.com/en/info/covid-19'>Corona Virus Q&A</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1043193e6efe4d70755b1df8ebf171da9f63f859'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/650572/t/5"></script></h2>
-	
-<a href="/index.html"><img class="bottomright" src="Logo.png" alt="logo" height="100%" width="100%">
 
 </body>
