--- a/Primaries/Dates/April7.html
+++ b/Primaries/Dates/April7.html
@@ -182,6 +182,12 @@ h5 {
   width:33.33333%;
   text-align:center;
 }
+	
+.logo {
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+{	
 
 </style>
 </head>
@@ -215,13 +221,15 @@ h5 {
     <tr>
       <th>
 	    <a class="alignleft">Delegates: 77</a>
-	    <a class="aligncenter" href="https://interactives.ap.org/primary-elections-2020-04-04/?site=thenewyorker&STATE=WI&OFFICE=P" target="_blank" >Wisconsin</a>
+	    <a class="aligncenter" href="https://interactives.ap.org/primary-elections-2020-04-07/?site=thenewyorker&STATE=WI&OFFICE=P" target="_blank" >Wisconsin</a>
 	  </th>
     </tr>
     <tr>
-      <td align="center" width="50%"><iframe src="https://interactives.ap.org/primary-elections-2020-04-04/?site=thenewyorker&STATE=WI&OFFICE=P" style="width:100%;height:691.6px;"></iframe></td>
+      <td align="center" width="50%"><iframe src="https://interactives.ap.org/primary-elections-2020-04-07/?site=thenewyorker&STATE=WI&OFFICE=P" style="width:100%;height:691.6px;"></iframe></td>
     </tr>
 </table>
+	
+<a href="/index.html"><img align="right" class="logo" src="Logo_Bg_Rnd.png" alt="logo" height="40px" width="40px">
 
 <h2 align="center"> <a href='https://www.symptoma.com/en/info/covid-19'>Corona Virus Q&A</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1043193e6efe4d70755b1df8ebf171da9f63f859'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/650572/t/5"></script></h2>
