--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -7,7 +7,7 @@
       <meta name="theme-color" content="#000000">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" rel="stylesheet">
-	  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+	  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
 	<style>
 	
 body {
@@ -15,12 +15,13 @@ body {
 }
 	
 h1 {
-  font-family: 'Open Sans', serif;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 100;
   text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
   color: #ffffff;
-  text-shadow: 0 0 2px rgba(240, 240, 240, 1);
+  text-shadow: 0 0 1px rgba(240, 240, 240, 1);
 }
 	  
 .fa-reddit-square:hover {
