--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -40,11 +40,12 @@ h1 {
 /* The sidebar links */
 .sidebar a {
   text-decoration: none;
+  margin-bottom: 5px;
   font-size: 30px;
   color: #ffffff;
   display: block;
   transition: 0.3s;
-  font-family: 'Open Sans', serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 /* When you mouse over the navigation links, change their color */
