--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -1619,5 +1619,8 @@ h1 {
          </div>
       </div>
    </div>
+	   
+<a href="/index.html"><img align="right" class="logo" src="Logo_Bg_Rnd.png" alt="logo" height="40px" width="40px">
+	
 </body>
 </html>
