--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -558,6 +558,6 @@ h1 {
          </div>
       </div>
    </div>
-   <a href="/index.html"><img align="right" class="logo" src="Logo_Bg_Rnd.png" alt="logo" height="40px" width="40px">	
+   <a href="/index.html"><img align="right" class="logo" src="Logo.png" alt="logo" height="40px" width="40px">	
 </body>
 </html>
