--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -20,8 +20,8 @@
 
 .flex-container > div {
   background-color: #292828;
-  width: 250px;
-  height: 188px;
+  width: 100%;
+  height: 100%;
   flex: 0 0 33.333333%;
 }
 
