--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -244,6 +244,13 @@ a:link {
 a:visited {
 	color: white
 }
+  
+.logo {
+    position: fixed;
+    bottom: 16px;
+    right: 16px;
+    opacity: 1;
+{
 
 @media (max-width: 981px) {
   
@@ -601,5 +608,6 @@ a:visited {
    </article>
    <div class="footer"></div>
    <div class="emptyBlocks flex-container" align="center">GENERAL, HERE WE COME!</div>
+   <a href="/index.html"><img align="right" class="logo" src="images/Logo_Shadow.png" alt="logo" height="80px" width="80px">	
 </body>
 </html>
