--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -608,6 +608,6 @@ a:visited {
    </article>
    <div class="footer"></div>
    <div class="emptyBlocks flex-container" align="center">GENERAL, HERE WE COME!</div>
-   <a href="/index.html"><img align="right" class="logo" src="images/Logo_Shadow.png" alt="logo" height="80px" width="80px">	
+   <a href="/index.html"><img align="right" class="logo" src="Images/Logo_Shadow.png" alt="logo" height="80px" width="80px">	
 </body>
 </html>
