--- a/Primaries/Primaries.html
+++ b/Primaries/Primaries.html
@@ -342,7 +342,7 @@ a:visited {
 <body>
     <div class="emptyBlocks flex-container" align="center"><p><span>DEMOCRATIC&nbsp</span><span>PRIMARIES</span></div>
    <article>
-      <a href="dates/PlaceholderPage.html" target="_blank">
+      <a href="Dates/PlaceholderPage.html" target="_blank">
          <h1 class="title bot-left flex-container2">April 04.</h1>
       </a>
       <div class="flex-container3">
@@ -356,7 +356,7 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/April7.html" target="_blank">
+      <a href="Dates/April7.html" target="_blank">
          <h1 class="title bot-left flex-container2">April 07.</h1>
       </a>
       <div class="flex-container3">
@@ -370,7 +370,7 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/PlaceholderPage.html" target="_blank">
+      <a href="Dates/PlaceholderPage.html" target="_blank">
          <h1 class="title bot-left flex-container2">April 10.</h1>
       </a>
       <div class="flex-container3">
@@ -384,7 +384,7 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/PlaceholderPage.html" target="_blank">
+      <a href="Dates/PlaceholderPage.html" target="_blank">
          <h1 class="title bot-left flex-container2">April 17.</h1>
       </a>
       <div class="flex-container3">
@@ -398,13 +398,13 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/April28.html" target="_blank">
+      <a href="Dates/April28.html" target="_blank">
          <h1 class="title bot-left flex-container2">April 28.</h1>
       </a>
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">New&nbspYork<span class="icon-New-York"></h2>
          </a>
          </span>
@@ -412,7 +412,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Pennsylvania<span class="icon-Pennsylvania"></h2>
          </a>
          </span>
@@ -421,13 +421,13 @@ a:visited {
    <article>
       <div class="category"></div>
       <span>
-      <a href="dates/May2.html" target="_blank">
+      <a href="Dates/May2.html" target="_blank">
          <h1 class="title bot-left flex-container2">May 02.</h1>
       </a>
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Kansas<span class="icon-Kansas"></h2>
          </a>
          </span>
@@ -435,13 +435,13 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/May12.html" target="_blank">
+      <a href="Dates/May12.html" target="_blank">
          <h1 class="title bot-left flex-container2">May 12.</h1>
       </a>
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Nebraska<span class="icon-Nebraska"></h2>
          </a>
          </span>
@@ -449,7 +449,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">West&nbspVirginia<span class="icon-West-Virginia"></h2>
          </a>
          </span>
@@ -457,13 +457,13 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/May19.html" target="_blank">
+      <a href="Dates/May19.html" target="_blank">
          <h1 class="title bot-left flex-container2">May 19.</h1>
       </a>
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Georgia<span class="icon-Georgia"></h2>
          </a>
          </span>
@@ -471,7 +471,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Oregon<span class="icon-Oregon"></h2>
          </a>
          </span>
@@ -479,13 +479,13 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/June2.html" target="_blank">
+      <a href="Dates/June2.html" target="_blank">
          <h1 class="title bot-left flex-container2">June 02.</h1>
       </a>
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Connecticut<span class="icon-Connecticut"></h2>
          </a>
          </span>
@@ -493,7 +493,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Delaware<span class="icon-Delaware"></h2>
          </a>
          </span>
@@ -501,7 +501,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Distric&nbspof&nbspColumbia<span class="icon-DC"></h2>
          </a>
          </span>
@@ -509,7 +509,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Indiana<span class="icon-Indiana"></h2>
          </a>
          </span>
@@ -517,7 +517,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Maryland<span class="icon-Maryland"></h2>
          </a>
          </span>
@@ -525,7 +525,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Montana<span class="icon-Montana"></h2>
          </a>
          </span>
@@ -533,7 +533,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">New&nbspJersey<span class="icon-New-Jersey"></h2>
          </a>
          </span>
@@ -541,7 +541,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">New&nbspMexico<span class="icon-New-Mexico"></h2>
          </a>
          </span>
@@ -549,7 +549,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Ohio<span class="icon-Ohio"></h2>
          </a>
          </span>
@@ -557,7 +557,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Rhode&nbspIsland<span class="icon-Rhode-Island"></h2>
          </a>
          </span>
@@ -565,7 +565,7 @@ a:visited {
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">South&nbspDakota<span class="icon-South-Dakota"></h2>
          </a>
          </span>
@@ -573,13 +573,13 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/June20.html" target="_blank">
+      <a href="Dates/June20.html" target="_blank">
          <h1 class="title bot-left flex-container2">June 20.</h1>
       </a>
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Louisiana<span class="icon-Louisiana"></h2>
          </a>
          </span>
@@ -587,13 +587,13 @@ a:visited {
    </article>
    <article>
       <div class="category"></div>
-      <a href="dates/June23.html" target="_blank">
+      <a href="Dates/June23.html" target="_blank">
          <h1 class="title bot-left flex-container2">June 23.</h1>
       </a>
       <div class="flex-container3">
          <div></div>
          <span>
-         <a href="dates/PlaceholderPage.html" target="_blank">
+         <a href="Dates/PlaceholderPage.html" target="_blank">
             <h2 align="center">Kentucky<span class="icon-Kentucky"></h2>
          </a>
          </span>
